Fix word breaks inside tables

--- a/znai-reactjs/src/doc-elements/table/Table.css
+++ b/znai-reactjs/src/doc-elements/table/Table.css
@@ -42,7 +42,7 @@
 }
 
 .simple-table td {
-    word-break: break-all;
+    word-break: break-word;
 }
 
 .simple-table .ui.celled.table tr td {
